Fix card spacing in responsive view

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -327,3 +327,10 @@ body {
         opacity: 0.15;
     }
 }
+
+.card {
+    @media (max-width: 575px) {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+}
